fix(style): Corners overlapping

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,7 @@ ha-card {
   flex: 1;
   position: relative;
   padding: 0px;
+  overflow: hidden;
 }
 
 .fill-gap {
